fixed some alignment errors/added @media responsive code

--- a/src/styles.css
+++ b/src/styles.css
@@ -98,3 +98,11 @@ a:hover {
   text-decoration: underline;
   color: #8a2140;
 }
+@media (max-width: 500px) {
+  .thumbnail-imgs {
+    margin: 0 auto;
+  }
+  iframe {
+    width: 100%;
+  }
+}
